update project for beast 2.8.0-beta7
remove local dependency on lphybeast and beast jar files. project now works entirely with maven dependencies.